<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="47dp"
        android:layout_gravity="center"
        android:text="@string/BLANCO"
        android:textSize="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="47dp"
        android:layout_gravity="center"
        android:text="@string/app_name"
        android:textSize="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/ASUNTO"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="italic"></TextView>


        <EditText

            android:layout_width="100sp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="80sp"
            android:layout_weight="2"
            android:id="@+id/Ingrese_Asunto"
            android:text="@string/RECIBE_ASUNTO"
            android:textStyle="italic"
            android:textSize="22sp"
            android:textColor="@color/white"
            android:textAlignment="center">

        </EditText>
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/CONTENIDO"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="italic"></TextView>


        <EditText

            android:layout_width="100sp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="80sp"
            android:layout_weight="2"
            android:id="@+id/Ingrese_Contenido"
            android:text="@string/RECIBE_CONTENIDO"
            android:textStyle="italic"
            android:textSize="22sp"
            android:textColor="@color/white"
            android:textAlignment="center">

        </EditText>
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/CORREO"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="italic"></TextView>


        <EditText

            android:layout_width="100sp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="80sp"
            android:layout_weight="2"
            android:id="@+id/Ingrese_Correo"
            android:text="@string/RECIBE_CORREO"
            android:textStyle="italic"
            android:textSize="22sp"
            android:textColor="@color/white"
            android:textAlignment="center">

        </EditText>
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/NOMBRE"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="italic"></TextView>


        <EditText

            android:layout_width="100sp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="80sp"
            android:layout_weight="2"
            android:id="@+id/Ingrese_Nombre"
            android:text="@string/RECIBE_NOMBRE"
            android:textStyle="italic"
            android:textSize="22sp"
            android:textColor="@color/white"
            android:textAlignment="center">

        </EditText>
    </LinearLayout>
    <LinearLayout
        android:gravity="center"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/Guarda"
            android:text="@string/BOTON_GUARDAR"
            android:textSize="20sp"
            android:textAlignment="center">

        </Button>

    </LinearLayout>
    <LinearLayout
        android:gravity="center"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/Elimina"
            android:text="@string/BOTON_ELIMINAR"
            android:textSize="20sp"
            android:textAlignment="center">

        </Button>

    </LinearLayout>

</LinearLayout>